--- a/src/app/allmemo/allmemo.component.html
+++ b/src/app/allmemo/allmemo.component.html
@@ -86,7 +86,8 @@
                                 <label for="batch">StaffIdFrom</label>
                                 <select type="text" id="batch" class="form-control" formControlName="staffIdFrom">
                                     <option value="">-Select-</option>
-                                    <option *ngFor="let item of allStaffs" [value]="item.staffId">{{item.name}}</option>
+                                    <option *ngFor="let item of allStaffs" [value]="item.rwssStaffId">{{item.staffCode}}
+                                    </option>
 
                                 </select>
                             </div>
@@ -95,7 +96,8 @@
                                 <label for="batch"> StaffIdTo</label>
                                 <select type="text" id="batch" class="form-control" formControlName="staffIdTo">
                                     <option value="">-Select-</option>
-                                    <option *ngFor="let item of allStaffs" [value]="item.staffId">{{item.name}}</option>
+                                    <option *ngFor="let item of allStaffs" [value]="item.rwssStaffId">{{item.staffCode}}
+                                    </option>
 
                                 </select>
                             </div>
@@ -104,7 +106,8 @@
                                 <label for="batch">StaffIdThrough</label>
                                 <select type="text" id="batch" class="form-control" formControlName="staffIdThrough">
                                     <option value="">-Select-</option>
-                                    <option *ngFor="let item of allStaffs" [value]="item.staffId">{{item.name}}</option>
+                                    <option *ngFor="let item of allStaffs" [value]="item.rwssStaffId">{{item.staffCode}}
+                                    </option>
 
                                 </select>
                             </div>
@@ -118,7 +121,15 @@
 
                                 </select>
                             </div>
-
+                            <div class="mt-3 form-row col-4">
+                                <div class="mt-3 form-row">
+                                    <label for="amendment">
+                                        {{phase+' '+'Amendment'}}
+                                    </label>
+                                    <input id="amendment" type="text" class="form-control"
+                                        formControlName="{{phase+'Amendment'}}">
+                                </div>
+                            </div>
                         </div>
 
 
